--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ img {
   visibility: hidden;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.36;
